[gd_scene load_steps=9 format=3 uid="uid://c2odvgfbiqjw6"]

[ext_resource type="Script" uid="uid://c1uhuq4clau6y" path="res://items/item.gd" id="1_tnite"]
[ext_resource type="Script" uid="uid://dexjadqgvta4h" path="res://items/item_data.gd" id="2_buahv"]
[ext_resource type="Texture2D" uid="uid://cydef34hpfjv5" path="res://items/item.png" id="3_k7rtb"]

[sub_resource type="Resource" id="Resource_88lpn"]
script = ExtResource("2_buahv")
id = "1"
name = "Sphere"
texture = ExtResource("3_k7rtb")
quantity = 1
type = "Consumable"
description = "+30 XP"
is_stackable = true
max_stack = 99
metadata/_custom_type_script = "uid://dexjadqgvta4h"

[sub_resource type="SphereShape3D" id="SphereShape3D_ttk8k"]

[sub_resource type="SphereMesh" id="SphereMesh_kg5e7"]

[sub_resource type="SphereMesh" id="SphereMesh_buahv"]

[sub_resource type="MeshTexture" id="MeshTexture_k7rtb"]
mesh = SubResource("SphereMesh_buahv")
image_size = Vector2(20, 20)

[node name="Item" type="Area3D" groups=["Items"]]
script = ExtResource("1_tnite")
item_data = SubResource("Resource_88lpn")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1.5, 0, 0, 0, 1.5, 0, 0, 0, 1.5, 0, 0, 0)
shape = SubResource("SphereShape3D_ttk8k")

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
mesh = SubResource("SphereMesh_kg5e7")

[node name="Timer" type="Timer" parent="."]

[node name="TextureRect" type="TextureRect" parent="."]
offset_right = 40.0
offset_bottom = 40.0
texture = SubResource("MeshTexture_k7rtb")

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
